--- a/DSCC.8392.DAL/DSCC.8392.DAL.EF.csproj
+++ b/DSCC.8392.DAL/DSCC.8392.DAL.EF.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>DSCC._8392.API</RootNamespace>
+    <RootNamespace>DSCC._8392.DAL</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,11 +12,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DSCC.8392.DAL\DSCC.8392.DAL.EF.csproj" />
     <ProjectReference Include="..\DSCC.8392.Domain\DSCC.8392.Domain.csproj" />
   </ItemGroup>
 
