Connection string modified

--- a/DSCC.8392.API/appsettings.json
+++ b/DSCC.8392.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "LibraryDB": "Server=(localdb)\\mssqllocaldb;Database=Library;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LibraryDB": "Server=dscc-cw1-8392-db.cob76wuzi6gb.us-east-1.rds.amazonaws.com;Database=Library;User Id=admin8392;password=admin8392"
   },
   "AllowedHosts": "*"
 }
