--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+   "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
