--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 files:
   #- source: /publish_output
   #  destination: /var/www/DCSS_8392_API
-  - source: /**/*
+  - source: /
     destination: /var/www/DCSS_8392_API
   - source: scripts/8392_API.service
     destination: /etc/systemd/system
